Fix the navbar logo being distorted/misplaced on Edge and Chrome

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -11,6 +11,7 @@ li {
 .swift-logo {
     margin: auto;
     flex-grow: 1;
+    max-height: 64px;
     max-width: 64px;
     
     perspective: 1000px;
